# inhouse-agents

./: .gitignore  CLAUDE.md  CLAUDE.md.original.md  CLAUDE_DRF.md  EMBEDDING_AND_GRAPH_GUIDE.md  README.md  README_DRF.md  REQUIREMENT_EXTRACTOR_SPEC.md  alembic.ini  basic_rule.md  check_db.py  info.md  main.py  package-lock.json  plan.md  poll_job.py  pyproject.toml  requirements.txt  response.json  run_commands.md  scratch_files.txt  test_kuzu_persist.py  test_query.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-stage-3-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md
app/: __init__.py  dependencies.py
app/api/: main_router.py
app/core/: config.py  logger.py
app/core/helpers/: __init__.py  exception.py  message.py
app/utils/: retry_utils.py
config/: settings.yaml
correct_code_examples/Dashboard_Samples/Dashboard03/: Dashboard3.tsx  (+1 more)
db/: chunker.py  embedder.py  enricher.py  query.py  scanner.py  sqlite_store.py  unified_chunker.py  unified_ingest.py  unified_query.py  unified_schema.py
frontend_UI/: CLAUDE_UI.md  index.html  package-lock.json  package.json
frontend_UI/src/: App.tsx  index.css
scripts/: build_graph.py  build_rtk_code_graph.py  check_jobs_schema.py  create_jobs_table.py  embed_examples.py  embed_toolkit.py  test_segmentation.py
src/msbc/: config.py
tests/: test_requirement_extractor_stabilization.py
(+167 files in other folders)
