[project]
name = "devAgents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "einops>=0.8.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "uvicorn>=0.42.0",
    "truststore>=0.10.0",
    "voyageai>=0.3.7",
    "tree-sitter-typescript>=0.23.2",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.2",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
    "jsonschema>=4.26.0",
    "langgraph>=1.1.3",
    "anyio>=4.13.0",
    "huggingface-hub>=1.9.0",
    "langchain-core>=1.2.26",
    "pip-system-certs>=5.3",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
]
